--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="./assets/favicon.17e50649.svg"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>React Vite SPA App</title>
 		<link
@@ -13,12 +17,11 @@
 			href="https://fonts.googleapis.com/icon?family=Material+Icons"
 			rel="stylesheet"
 		/>
-		<script type="module" crossorigin src="/assets/index.4f0a2895.js"></script>
-		<link rel="stylesheet" href="/assets/index.d854550a.css">
+		<script type="module" crossorigin src="./assets/index.4f0a2895.js"></script>
+		<link rel="stylesheet" href="./assets/index.d854550a.css" />
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
-		
 	</body>
 </html>
